# granite-docling-258m-demo

./: .env.sample  .gitignore  .gitlint  .pre-commit-config.yaml  DEVELOPMENT.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: deploy-huggingface.yml.disabled  sync-hf-simple.yml.disabled
src/: app.css  app.py  app_head.html
src/themes/: carbon.py  research_monochrome.py
